<resources>
    <string name="nome_app"> Lome </string>
    <string name="app_name"> Lome </string>
    <string name="adsMobileAppID">removed</string>
    <string name="adsMainBannerID">removed</string>
    <string name="adsKeyManagerBannerID">removed</string>
    <string name="adsHiderBannerID">removed</string>
    <string name="adsInterstitialBannerID">removed</string>
    <string name="adsProgressBannerID">removed</string>
    <string name="adsRsaKeyManager">removed</string>
    <string name="adsSpecialToolsActivity">removed</string>
    <string name="adsRsaMakerActivity">removed</string>
    <string name="publicLicenseAppKey">removed</string>
    <string name="progressActivityAd">removed</string>
    <string name="noAdsProductId">no_ads</string>
    <string name="no_file_explorer_found">No file manager found to open the saving directory, please install a File Manager.</string>
    <string name="adsShredderActivity">removed</string>
    <string name="noAds">Remove ADS</string>
    <string name="workInProgress">Work in progress, coming soon</string>
    <string name="newVersionTitle">New Changes</string>
    <string name="newVersionDescription">In a difficult moment like this, digital activity is on the rise and the data we store can be increasingly at risk, therefore, from today, Lome has decided to give ALL the opportunity to fully exploit the functionality of the application with a very small contribution from advertising. You can still remove advertisements by donating a coffee to the developer. Keep your data safe and don\'t miss the new features coming soon! Everything will be fine!</string>
    <string name="overview"> Overview </string>
    <string name="action_settings"> Settings </string>
    <string name="about_lome"> About </string>
    <string name="Help_lome"> Help </string>
    <string name="Slide1_title1"> Welcome! </string>
    <string name="Slide2_title2"> Multi-Key </string>
    <string name="Slide3_title3"> Cloud </string>
    <string name="Slide4_title4"> Full Forwarding </string>
    <string name="Slide5_title5"> Full protection </string>
    <string name="Slide1_description1"> Start keeping your secret files anytime and anywhere! With Lome you can make any type of file or text safe using the most modern and strong encryption algorithms! </string>
    <string name="Slide2_description2"> With Lome you can use different types of keys: textual, from Key-File or a QR-Code! </string>
    <string name="Slide3_description3"> You can select files to be processed directly from the cloud like Dropbox or Drive! </string>
    <string name="Slide4_description4"> To send files directly from any app, on Lome you just have to share them! </string>
    <string name="Slide5_description5"> Set the block of the app to prevent unauthorized use. If available, even with fingerprint! </string>
    <string name="AppName"> Lome </string>
    <string name="Version_text"> Version </string>
    <string name="Developer_text"> Developer </string>
    <string name="Contact_text"> Contacts </string>
    <string name="app_version"> 1.3.7 </string>
    <string name="selectFiles">Select Files</string>
    <string name="fileNumber">File number</string>
    <string name="adFreePurchased">Lome is now AD Free! Thanks for the donation</string>
    <string name="unlockMigrationError">Error: The key inserted is not valid</string>
    <string name="Author"> Fabrizio Amico </string>
    <string name="email"> lo2me.info@gmail.com </string>
    <string name="confirm_title"> Confirm </string>
    <string name="confirmShred">Confirm by clicking the checkbox</string>
    <string name="notAgree">You have to agree before continue</string>
    <string name="agree">I Agree</string>
    <string name="viewShredWarning">I am aware that all selected data will be deleted securely, permanently and can no longer be recovered</string>
    <string name="secure_proceed_confirmation"> Are you sure you want to continue? </string>
    <string name="start_elaboration"> Start </string>
    <string name="cancel"> Cancel </string>
    <string name="debug_elaboration_title"> ELABORATION </string>
    <string name="debug_elaboration_message1"> Operation canceled </string>
    <string name="key_file_options"> Select an option</string>
    <string name="noAccountError">Error: Seems you don\'t have any Google account registered in this device</string>
    <string name="unlockError">Error: The operation couldn\'t be done</string>
    <string name="unlock">Unlock Lome</string>
    <string name="unlock_text">Enter the unlock code in the text field below and confirm</string>
    <string name="unlock_confirm_button">Unlock</string>
    <string name="key_file_options_message"> Where do you want to get the key-file? Remember that you can create new ones directly from the manager.</string>
    <string name="elaboration_pass_title_doublepass"> Passphrase </string>
    <string name="elaboration_pass_message_doublepass"> Enter the password you want to use </string>
    <string name="elaboration_pass_hint_doublepass"> Password </string>
    <string name="elaboration_pass_rehint_doublepass"> Re-Insert </string>
    <string name="elaboration_pass_title_singlepass"> Passphrase </string>
    <string name="elaboration_pass_message_singlepass"> Enter the passphrase </string>
    <string name="elaboration_pass_hint_singlepass"> Passphrase </string>
    <string name="debug_pass_input_cancel"> PASS INPUT </string>
    <string name="explore_option"> Explore </string>
    <string name="elaboration_empty_directory"> The selected directory does not contain any files. </string>
    <string name="elaboration_pick_file_error"> Error getting files: </string>
    <string name="total_file_count"> Total: </string>
    <string name="save_dir_text"> Save: </string>
    <string name="decipher"> Decrypt </string>
    <string name="cipher"> Encrypt </string>
    <string name="choice_for_double_operation"> Operation type </string>
    <string name="choice_for_double_operation_message"> You have selected encrypted and non-encrypted files, what operation do you want to do? </string>
    <string name="encrypt_text"> Encryption </string>
    <string name="decrypt"> Decryption </string>
    <string name="read_key_file_error"> Error reading the Key-File: </string>
    <string name="automatic_key_file_search"> Automatic Search: Enabled. </string>
    <string name="not_automatic_key_search_active"> This feature is enabled when you have two or more key-files! </string>
    <string name="information"> Information </string>
    <string name="key_manager_info">By clicking on \'+\' you can import a key file that you have saved on your device. The use in the manager of these keys, once imported, is always guaranteed, even by deleting the source key-file. For more information see the section dedicated to the info you find on the menu.</string>
    <string name="key_deletion"> Deletion </string>
    <string name="key_deletion_message"> Do you want to delete this key-file? </string>
    <string name="key_deletion_success"> Key successfully deleted! </string>
    <string name="key_deletion_error"> An error occurred while deleting the key. </string>
    <string name="delete"> Delete </string>
    <string name="import_key_title"> Import Key-File </string>
    <string name="import_key_message"> Enter the key information </string>
    <string name="import_key_hint1"> Name </string>
    <string name="import_key_hint2"> Description </string>
    <string name="save"> Save </string>
    <string name="name_obligation"> The entry of the name is mandatory. </string>
    <string name="key_added"> Key-File successfully added! </string>
    <string name="key_save_error"> Unable to save, you can only temporarily use the </string>
    <string name="choice"> Choose </string>
    <string name="key_maker_info"> The creation of a SHA-256 key is twice as strong and difficult (if not impractical) to discover a MD5 key. Therefore it is the recommended choice. For more information on the various parameters, consult the appropriate info section on the main menu. </string>
    <string name="generated_passphrase"> Generated Passphrase. </string>
    <string name="to_manager"> Save to Manager </string>
    <string name="create"> Create </string>
    <string name="critic_error_tile"> Critical error </string>
    <string name="elaboration"> Processing </string>
    <string name="settings_save_dir_summary_text"> Set a custom save directory, or by selecting \ \'Default \' the folder autogenerated by Lome will be used. </string>
    <string name="save_dir_title"> Save </string>
    <string name="cipher_algorithm_title"> Encryption Algorithm </string>
    <string name="cipher_algorithm_text"> Choose the encryption algorithm you want to use. For more information on the choice, look at the relevant section on the Help page. Recommended choice: AES-256 </string>
    <string name="delete_file_title"> File deletion </string>
    <string name="delete_file_summary"> Automatically deletes and safely (via wiping) the selected files at the end of the operation, keeping only those processed. </string>
    <string name="enable_log_title"> Enable Log </string>
    <string name="enable_log_summary"> When the files to be processed are more than one, a detailed log will be displayed if errors occur during the operation. </string>
    <string name="recursive_acquire_title"> Recursive acquisition </string>
    <string name="recursive_acquire_summary"> Selecting a directory to be processed will also include all the files contained in all the subfolders of this directory. </string>
    <string name="advanced_title"> Security &amp; Advanced </string>
    <string name="general_title"> General </string>
    <string name="notifications_title"> Notifications </string>
    <string name="notifications_summary"> Choose whether to enable or disable notifications. </string>
    <string name="elaboration_title"> Processing </string>
    <string name="hash_algorithm"> Hash algorithm: </string>
    <string name="type"> Type: </string>
    <string name="insert"> Insert </string>
    <string name="re_insert"> Re-enter </string>
    <string name="save_to_manager"> Save in Manager </string>
    <string name="general_settings_header">General settings about interacting with the application</string>
    <string name="elaboration_settings_header">Settings on how files are processed</string>
    <string name="security_option_header">Advanced and Security Options</string>
    <string name="remove_passes_title">Removal steps</string>
    <string name="remove_passess_summary">Specifies the number of overrides during file deletion. Higher, more security. ATTENTION: With steps greater than one, processing times may increase dramatically.</string>
    <string name="vsitr_remove_title">VSITR Removal</string>
    <string name="vsitr_remove_summary">Enable the VSITR Wipe Method. It is a very powerful algorithm that follows seven details fixed steps of overwriting. ATTENTION: Processing times will increase dramatically.</string>
    <string name="info">Info</string>
    <string name="move_image_or_video_title">Moving images and videos</string>
    <string name="move_image_or_video_summary">If activated, all decrypted image and video files will be automatically moved directly to the gallery, otherwise a copy will be created. N.B. Creating copies will use more memory.</string>
    <string name="images">Images</string>
    <string name="videos">Video</string>
    <string name="files_">Files</string>
    <string name="all">All</string>
    <string name="filters">Filter</string>
    <string name="restore_all">Restore all</string>
    <string name="md5">MD5</string>
    <string name="sha256_title">SHA-256</string>
    <string name="file_single">File</string>
    <string name="qrcode">QR-Code</string>
    <string name="paspphrase">Passphrase:</string>
</resources>